basic multiplication done

--- a/algo.html
+++ b/algo.html
@@ -42,7 +42,7 @@
                     read "21")
                 </p>
                 
-                    <a href="algo.html" class="btn btn-dark">Try It Out</a>
+                    <a href="index.html" class="btn btn-dark">Try It Out</a>
                 
             </div>
         </div>
