better explainatation and begining JS

--- a/algo.html
+++ b/algo.html
@@ -29,17 +29,19 @@
     </nav>
 
     <div class="container">
-        <div class="card" style="width: 30%">
+        <div class="card" style="width: 65%" style="height: 20%">
             <img class="card-img-top" src="Screen Shot 2019-07-05 at 11.46.06 AM.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Orginal Whiteboarding Exercise</h5>
                 <p class="card-text">
-                    This is an attempt to have an Account Number (43505)
-                    <br>
-                    be multiplied by a chosen multiplier (12)
-                    <br>
-                    while being able to choose the read direction of the multiplier (Right to left, thus making "12" be
-                    read "21")
+                    This is an attempt to have an each individual number in the Account Number <br>
+                    (43505 = 4,3,5,0,5)<br>
+                    be multiplied by a chosen multiplier <br>
+                    (12 = 1,2) <br>
+                    In this case, we are using a option that allows our multiplier to be read from right to left<br>
+                    (12 = 2,1)<br>
+                    Thus creating (4,3,5,0,5) being multiplied by repeating sequences of (2,1)<br>
+                    Resulting in (4,6,5,0,5)
                 </p>
                 
                     <a href="index.html" class="btn btn-dark">Try It Out</a>
