--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                             <small id="Help" class="form-text text-muted">bottom number</small>
                         </div>
                         <input type="button" class="btn btn-dark" onClick="multiplyBy()" Value="Go" />
+                        <input type="button" class="btn btn-danger" onClick="window.location.reload();" Value="Restart" />
                         
+                       
                     </form>
                 </li>
                 <li class="list-group-item">
